# waside

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
crates/waside/: Cargo.toml
crates/waside-cli/: Cargo.toml
crates/waside-cli/src/: term_color_printer.rs
crates/waside-component/: Cargo.toml
crates/waside-component/src/: bindings.rs  lib.rs
crates/waside/src/: decode.rs  lib.rs  print.rs
crates/waside/src/ast/: module.rs
js/: package-lock.json  package.json
