[workspace]
members = [
    "crates/waside",
    "crates/waside-cli",
    "crates/waside-component",
    "utils/wast-extract",
]
exclude = ["crates/waside/fuzz"]
resolver = "2"

[profile.release]
lto = true
opt-level = "z"
strip = "debuginfo"
codegen-units = 1

[workspace.dependencies]
wasmparser = { version = "0.245", features = ["std", "validate", "features", "simd"] }
wasm-encoder = { version = "0.245", features = ["std", "wasmparser"] }
wasmprinter = { version = "0.245" }
wast = { version = "245", features = ["wasm-module"] }
wat = { version = "1.245" }
anyhow = "1.0"
wasm-smith = { version = "0.245", features = ["wasmparser"] }
arbitrary = { version = "1", features = ["derive"] }
