[package]
name = "waside-cli"
version = "0.1.0"
edition = "2021"
license = "(Apache-2.0 WITH LLVM-exception) OR Apache-2.0 OR MIT"
description = "A CLI for waside."
repository = "https://github.com/eqrion/waside"
keywords = ["webassembly", "wasm", "ast", "cli"]
categories = ["wasm", "command-line-utilities"]

[[bin]]
name = "waside"
path = "src/main.rs"

[dependencies]
waside = { path = "../waside", version = "0.1.0" }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
termcolor = "1"
